First try fixing unresponsive height on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,16 @@
   font-size: 10px;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-image: url(../images/home-background.png);
   background-size: auto;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  height: 100vh;
+  min-height: 100%;
   width: 100vw;
   overflow: hidden;
   display: flex;
